Add LOCItem types

--- a/src/app/content/seattle/architects/somervellAndThomas.mdx
+++ b/src/app/content/seattle/architects/somervellAndThomas.mdx
@@ -30,12 +30,27 @@ The first Seattle Carnegie library was actually the original Central Library. Es
 
 At the beginning of 1901, a huge fire consumed the wooden Yesler Mansion that the library was operating out of. It left the library with nothing -- no books and no home.
 
-<LOCItem image="/loc/seattle/somervellAndThomas/libraryFire.png" linkOut="https://www.loc.gov/resource/sn87093407/1901-01-02/ed-1/?sp=1&q=library&r=-0.01,0.306,0.355,0.249,0" caption="The only books that survived were the ones that were checked out at the time of the fire - about 5,000." alt=""/>
-<LOCItem image="/loc/seattle/somervellAndThomas/newLibrary.png" linkOut="https://www.loc.gov/resource/sn87093407/1901-01-03/ed-1/?sp=1&q=library&r=-0.054,0.112,0.436,0.299,0" caption="But only a day later, people were hopeful - it seemed that the library had support to come back bigger than ever before." alt=""/>
+<LOCItem
+    type="newspaper"
+    image="/loc/seattle/somervellAndThomas/libraryFire.png"
+    linkOut="https://www.loc.gov/resource/sn87093407/1901-01-02/ed-1/?sp=1&q=library&r=-0.01,0.306,0.355,0.249,0"
+    caption="The only books that survived were the ones that were checked out at the time of the fire - about 5,000."
+    alt=""/>
+<LOCItem
+    type="newspaper"
+    image="/loc/seattle/somervellAndThomas/newLibrary.png"
+    linkOut="https://www.loc.gov/resource/sn87093407/1901-01-03/ed-1/?sp=1&q=library&r=-0.054,0.112,0.436,0.299,0"
+    caption="But only a day later, people were hopeful - it seemed that the library had support to come back bigger than ever before."
+    alt=""/>
 
 Four days after the fire, news broke that Andrew Carnegie, who before had written Seattle off as a “hot air boom town” whose bust was imminent, would donate $200,000 so that the city could build a new, “fireproof” library. The equivalent of $7.5 million dollars today, the city used this funding to purchase the whole city block between 4th and 5th avenue on Madison and Spring, which is the same location where the Central Library sits today.
 
-<LOCItem image="/loc/seattle/somervellAndThomas/seattleMap.png" linkOut="https://www.loc.gov/resource/g4284s.pm009770/?r=0.409,0.25,0.286,0.196,0" caption="" alt=""/>
+<LOCItem
+    type="map"
+    image="/loc/seattle/somervellAndThomas/seattleMap.png"
+    linkOut="https://www.loc.gov/resource/g4284s.pm009770/?r=0.409,0.25,0.286,0.196,0"
+    caption=""
+    alt=""/>
 
 
 <ComicSection cols={7} overlap={100} rowHeight="2rem" elements={[
