--- a/src/app/content/seattle/built/medgarEversPool.mdx
+++ b/src/app/content/seattle/built/medgarEversPool.mdx
@@ -23,7 +23,10 @@ At the time, Seattle was also examining its own discriminatory practices. In the
 
 Seattle has a large Black community, with three large migrations of folks coming to the city in hopes of a good life. This dream was heavily championed by Horace R. Cayton Sr., a journalist and eventual creator of the Seattle Republican, which, of Seattle’s seven African American newspapers, was the most successful and was published from 1894 until 1915.
 
-<LOCItem image="/loc/seattle/medgarEversPool/seattleRepNews.png" linkOut="https://www.loc.gov/resource/sn84025811/1903-04-17/ed-1/?sp=6&st=image&r=-0.107,-0.101,1.131,0.801,0"/>
+<LOCItem
+    type="newspaper"
+    image="/loc/seattle/medgarEversPool/seattleRepNews.png"
+    linkOut="https://www.loc.gov/resource/sn84025811/1903-04-17/ed-1/?sp=6&st=image&r=-0.107,-0.101,1.131,0.801,0"/>
 
 The Seattle Republican had national spread, having Pullman Porters distribute papers on their train runs from the west coast to the east.
 
@@ -43,7 +46,9 @@ Note: this is not to say that there was no discrimination against African Americ
 
 But as time went on, and as many of the Chinese and Indigenous people were driven out of Seattle, more hatred was directed towards Seattle’s Black community. For example, though not written in law, some practices systematically blocked people of color from purchasing homes in specific neighborhoods.
 
-<LOCItem image="/placeholderThumbnail.png" showSave={false}/>
+<LOCItem
+    image="/placeholderThumbnail.png"
+    showSave={false}/>
 
 With the new pool being built in Seattle’s Central District, the community petitioned to name it after Medgar Evers. In a document, they wrote of him:
 
