--- a/src/app/content/seattle/built/montlakeBridge.mdx
+++ b/src/app/content/seattle/built/montlakeBridge.mdx
@@ -19,7 +19,10 @@ The Lake Washington Ship Canal was built to create a navigable waterway from the
 
 There were five different paths considered -- 
 
-<LOCItem image="/loc/seattle/montlakeBridge/canalRoutes.png" linkOut="https://www.loc.gov/resource/gdcmassbookdig.historyadvantage00seat/?sp=33&q=seattle+canal&r=-0.288,0.48,1.732,1.187,0"/>
+<LOCItem
+    type="map"
+    image="/loc/seattle/montlakeBridge/canalRoutes.png"
+    linkOut="https://www.loc.gov/resource/gdcmassbookdig.historyadvantage00seat/?sp=33&q=seattle+canal&r=-0.288,0.48,1.732,1.187,0"/>
 
 Routes 1 and 2 would have cut through what is present day downtown Seattle, and it was concluded that this land was too in-demand to cut away. The route that was eventually chosen was the North Canal cut from Shilshole Bay, despite being the longest at 16.9 miles.
 
@@ -29,20 +32,40 @@ With a new waterway, there was also a new problem - the city was now divided in 
 <ComicSection rowHeight="3rem" elements={[
     {type:'text', position:{col:1, row:1}, size:{width:3, height:1}, style:{outline:"box", fontSize:"1rem", backgroundColor:"white"}, src:"The bridge is double-leaf, which means the road divides into two parts when lifted."},]}/>
 
-<LOCItem image="/loc/seattle/montlakeBridge/doubleLeaf.png" linkOut="https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1&st=image" caption="" alt=""/>
+<LOCItem
+    type="pnp"
+    image="/loc/seattle/montlakeBridge/doubleLeaf.png"
+    linkOut="https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1&st=image"
+    caption=""
+    alt=""/>
 <ComicSection rowHeight="3rem" elements={[
     {type:'text', position:{col:1, row:1}, size:{width:3, height:1}, style:{outline:"box", fontSize:"1rem", backgroundColor:"white"}, src:"It is also a bascule bridge, which is French for balance - to save energy, the weight of the road-half is perfectly balanced on the other side with a counterweight."},]}/>
 
-<LOCItem image="/loc/seattle/montlakeBridge/bascule.png" linkOut="https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=3&st=image" caption="" alt=""/>
+<LOCItem
+    type="pnp"
+    image="/loc/seattle/montlakeBridge/bascule.png"
+    linkOut="https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=3&st=image"
+    caption=""
+    alt=""/>
 
 <ComicSection rowHeight="3rem" elements={[
     {type:'text', position:{col:1, row:1}, size:{width:3, height:1}, style:{outline:"box", fontSize:"1rem", backgroundColor:"white"}, src:"The Montlake Bridge also uses trunnions, which is the pivot point that the leaves and counterweight rotate around."},]}/>
 
-<LOCItem image="/loc/seattle/montlakeBridge/trunnion.png" linkOut="https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=2&st=image" caption="" alt=""/>
+<LOCItem
+    type="pnp"
+    image="/loc/seattle/montlakeBridge/trunnion.png"
+    linkOut="https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=2&st=image"
+    caption=""
+    alt=""/>
 
 They were inspired by similar bridges in Chicago, designed to cross the Chicago River.
 
-<LOCItem image="/loc/seattle/montlakeBridge/chicagoBridge.png" linkOut="https://www.loc.gov/resource/stereo.1s12313/" caption="Michigan Avenue Bridge over Chicago River" alt="stereograph of bridge opening up for a boat to pass under"/>
+<LOCItem
+    type="pnp"
+    image="/loc/seattle/montlakeBridge/chicagoBridge.png"
+    linkOut="https://www.loc.gov/resource/stereo.1s12313/"
+    caption="Michigan Avenue Bridge over Chicago River"
+    alt="stereograph of bridge opening up for a boat to pass under"/>
 
 The first bascule bridge completed was the Fremont Bridge in 1917, and an article about it was published in Engineering News-Record. Folks at the Strauss Bascule Bridge Company, the firm that had created the trunnion bascule bridge design, saw the article, and in 1920, they sued the city of Seattle for $348,000.
 
