--- a/src/app/content/seattle/built/tugboatFoss.mdx
+++ b/src/app/content/seattle/built/tugboatFoss.mdx
@@ -20,10 +20,20 @@ Historic buildings can be seen all around the world, but Seattle is special beca
 
 
 The oldest lightship:
-<LOCItem type="pnp" linkOut="https://www.loc.gov/resource/cph.3b19268/" image="/loc/seattle/tugboatFoss/lightboat.jpg" caption="Lightships were used as floating lighthouses" alt="photo of lightship"/>
+<LOCItem
+    type="pnp"
+    linkOut="https://www.loc.gov/resource/cph.3b19268/"
+    image="/loc/seattle/tugboatFoss/lightboat.jpg"
+    caption="Lightships were used as floating lighthouses"
+    alt="photo of lightship"/>
 
 The (second) oldest fireboat:
-<LOCItem linkOut="https://www.loc.gov/resource/hhh.wa0746.photos/?sp=1" image="/loc/seattle/tugboatFoss/fireboatDuwamish.jpg" caption="Fireboat Duwamish" alt="colored photo of red fireboat"/>
+<LOCItem
+    type="pnp"
+    linkOut="https://www.loc.gov/resource/hhh.wa0746.photos/?sp=1"
+    image="/loc/seattle/tugboatFoss/fireboatDuwamish.jpg"
+    caption="Fireboat Duwamish"
+    alt="colored photo of red fireboat"/>
 
 <ComicSection elements={[
     {type:"text", src:"and the definitive, MOST-OLDEST wooden tugboat:",position:{col: 1, row: 1}, size: {width:3, height: 2}, style:{outline: "none", fontSize: "1rem"}},
@@ -35,7 +45,11 @@ The (second) oldest fireboat:
 The *Arthur Foss* held many jobs. It started off in Astoria, Oregon, navigating the dangerous mouth of the Columbia River where it dumps into the Pacific Ocean. In the waters dubbed the “graveyard of the Pacific”, the Arthur Foss, then known as Wallowa, would act as an experienced guide and tow boats across the crossing.
 
 
-<LOCItem linkOut="https://www.loc.gov/resource/ppmsca.18165/" image="/loc/seattle/tugboatFoss/columbiaRiver.png" caption=""/>
+<LOCItem
+    type="pnp"
+    linkOut="https://www.loc.gov/resource/ppmsca.18165/"
+    image="/loc/seattle/tugboatFoss/columbiaRiver.png"
+    caption=""/>
 
 <ComicSection overlap={150} elements={[
     {type:"text", src:"You see that, kid? That's the Columbia River", position:{col: 2, row: 1}, size: {width:2, height: 1}, style:{outline: "bubble",}, bubbleStyle: {tailDegree: 60}},
