--- a/src/app/content/seattle/names/joseprizal.mdx
+++ b/src/app/content/seattle/names/joseprizal.mdx
@@ -48,7 +48,11 @@ efforts of Seattle Filipino Americans Trinidad Rojo and Vic Bacho.
   {type:"text", src:"**Hey!** Hey, what about a bridge and a park?", position:{col:3, row:12}, size:{width:3, height:2}, style:{outline:"bubble"}, bubbleStyle: {tailDegree: 10}},
 ]}/>
 
-<LOCItem linkOut="https://www.loc.gov/resource/sn88085780/1961-06-16/ed-1/?sp=1" image="/loc/joseprizal.jpg" caption="Page from the Filipino Forum, a newspaper for Seattle's Filipino community"  />
+<LOCItem
+  type="newspaper"
+  linkOut="https://www.loc.gov/resource/sn88085780/1961-06-16/ed-1/?sp=1"
+  image="/loc/joseprizal.jpg"
+  caption="Page from the Filipino Forum, a newspaper for Seattle's Filipino community"/>
 
 Learn more about Dr. Rizal here:
 
