--- a/src/app/content/seattle/names/mountBakerRidgeTunnel.mdx
+++ b/src/app/content/seattle/names/mountBakerRidgeTunnel.mdx
@@ -30,7 +30,12 @@ stickers: []
 
 Built in 1940, it had been a dream of Seattle engineer Homer Hadley since the 1920s to connect the city to the eastside. Without the bridge, the only way to access Seattle was approaching from the north or south, or via ferry.
 
-<LOCItem image="/loc/seattle/bridgeAndTunnel/seattleMap.png" linkOut="https://www.loc.gov/resource/g4284s.pm009770/?r=-0.032,-0.055,1.111,0.761,0" alt="" caption=""/>
+<LOCItem
+    type="map"
+    image="/loc/seattle/bridgeAndTunnel/seattleMap.png"
+    linkOut="https://www.loc.gov/resource/g4284s.pm009770/?r=-0.032,-0.055,1.111,0.761,0"
+    alt=""
+    caption=""/>
 
 <ComicSection overlap={50} rowHeight="4rem" elements={[
     {type:"image", src:"/loc/seattle/bridgeAndTunnel/homer1.png",position:{col:3, row:3}, size:{width:1, height:2}}, 
@@ -54,20 +59,30 @@ The solution he came up with was not far off from his original idea. A bridge su
     {type:"text", src:"They’re used for boats, seaplanes, and bridges!", position:{col:2, row:3}, size:{width:2, height:1}, style:{outline: "bubble"},}
 ]}/> 
 
-<LOCItem image="/loc/seattle/bridgeAndTunnel/james.jpg" linkOut="https://www.loc.gov/resource/cwpb.01892/" caption="This pontoon bridge was built during the Civil War in 7 hours. It was deconstructed after 3 days."/>
+<LOCItem
+    type="pnp"
+    image="/loc/seattle/bridgeAndTunnel/james.jpg"
+    linkOut="https://www.loc.gov/resource/cwpb.01892/"
+    caption="This pontoon bridge was built during the Civil War in 7 hours. It was deconstructed after 3 days."/>
 
 However, with the bridge approaching the land at water level, a tunnel would have to be carved through the tall Mount Baker Ridge that guards Seattle on the east. Thus, two feats of engineering were created:
 
 <ComicSection elements={[
     {type:'text', position:{col:1, row:1}, size:{width:3, height:1}, style:{outline:"box", fontSize:"1rem", backgroundColor:"white"}, src:"A tunnel through the soft clay of Mount Baker Ridge, which is difficult because it kept collapsing on itself. The result is the largest diameter soft-bodied tunnel in the world."},]}/>
-<LOCItem image="/loc/seattle/bridgeAndTunnel/tunnel.jpg" linkOut="https://www.loc.gov/resource/hhh.wa0182.photos/?sp=1" />
+<LOCItem
+    type="pnp"
+    image="/loc/seattle/bridgeAndTunnel/tunnel.jpg"
+    linkOut="https://www.loc.gov/resource/hhh.wa0182.photos/?sp=1"/>
 <ComicSection overlap={50} elements={[
     {type:"image",position:{col:2, row:1}, size:{width:1, height:2},src:"/loc/seattle/bridgeAndTunnel/medal.png"}
 ]}/>
 
 <ComicSection elements={[
     {type:'text', position:{col:1, row:1}, size:{width:3, height:1}, style:{outline:"box", fontSize:"1rem", backgroundColor:"white"}, src:"A bridge made of concrete that floats on water that is stable enough to transport cars. And it is...the second longest floating bridge in the world (the first is the SR520 Evergreen Point Floating Bridge only a couple miles north)."},]}/>
-<LOCItem image="/loc/seattle/bridgeAndTunnel/bridge.jpg" linkOut="https://www.loc.gov/item/wa0442/" />
+<LOCItem
+    type="pnp"
+    image="/loc/seattle/bridgeAndTunnel/bridge.jpg"
+    linkOut="https://www.loc.gov/item/wa0442/"/>
 <ComicSection overlap={50} elements={[
     {type:"image",position:{col:2, row:1}, size:{width:1, height:2},src:"/loc/seattle/bridgeAndTunnel/medal2.png"}
 ]}/>
