--- a/src/app/content/seattle/olmsted/ravenna.mdx
+++ b/src/app/content/seattle/olmsted/ravenna.mdx
@@ -36,13 +36,29 @@ John Charles Olmsted recommended that Ravenna Park be bought by the city for the
 
 Louise Beck had many naming ceremonies for the trees she named and even invited John Olmsted to attend the christening of Roosevelt while he was in town in 1908.
 
-<LOCItem caption="Invitation to naming ceremony" alt="a paper titled 'Dedication of Roosevelt'" image="/loc/seattle/ravenna/invitation.png" linkOut="https://www.loc.gov/resource/mss52571.mss52571-02-096_0293_0296/?sp=2&r=0.168,0.397,0.272,0.405,0"/>
+<LOCItem
+  type="manuscript"
+  caption="Invitation to naming ceremony"
+  alt="a paper titled 'Dedication of Roosevelt'"
+  image="/loc/seattle/ravenna/invitation.png"
+  linkOut="https://www.loc.gov/resource/mss52571.mss52571-02-096_0293_0296/?sp=2&r=0.168,0.397,0.272,0.405,0"/>
 
-<LOCItem alt="Letter written in cursive'" image="/loc/seattle/ravenna/letter1.png" linkOut="https://www.loc.gov/resource/mss52571.mss52571-02-096_0293_0296/?sp=2&st=image&r=0.239,0.102,0.402,0.333,0"/>
+<LOCItem
+  type="manuscript"
+  alt="Letter written in cursive'"
+  image="/loc/seattle/ravenna/letter1.png"
+  linkOut="https://www.loc.gov/resource/mss52571.mss52571-02-096_0293_0296/?sp=2&st=image&r=0.239,0.102,0.402,0.333,0"/>
 <Comic  size="L" image="/comics/ravenna-tree/ravennaTree7.png"  overlap={150} speechBubbles={[{text:"Dear, Mr. Olmsted,I’d really like to see you while you’re in town. You can come over here, or I can come to you. Either way works"}]}/>
-<LOCItem alt="continuation of letter" image="/loc/seattle/ravenna/letter2.png" linkOut="https://www.loc.gov/resource/mss52571.mss52571-02-096_0293_0296/?sp=3&st=image&r=0.323,0.009,0.293,0.436,0"/>
+<LOCItem
+  type="manuscript"
+  alt="continuation of letter"
+  image="/loc/seattle/ravenna/letter2.png"
+  linkOut="https://www.loc.gov/resource/mss52571.mss52571-02-096_0293_0296/?sp=3&st=image&r=0.323,0.009,0.293,0.436,0"/>
 <Comic  size="L" image="/comics/ravenna-tree/ravennaTree8.png"  overlap={150} speechBubbles={[{text:"I want to sync with you on a plan the city has for Ravenna Park -- they seem to want to extend 20th Ave N.E. into the park, which I think is a terrible idea"}, {text:"Either way, you should definitely come to the christening of Roosevelt! It’s a huge tree. Peace and Love, Louise"}]}/>
-<LOCItem alt="Olmsted's response"  caption="Dear Madam:
+<LOCItem
+  type="manuscript"
+  alt="Olmsted's response" 
+  caption="Dear Madam:
 Your letter of Dec. 27th has only just reached me having been taken to Boston by Mr. Dawson. 
 
 I thank you for your kind offer of hospitality.
@@ -50,7 +66,9 @@ I thank you for your kind offer of hospitality.
 As the matter to which you refer -might possibly be referred to me by the Park Board for report. It would be premature for me to examine into it at this time.
 I may say, however, that I am in hearty sympathy with the idea of preserving Ravenna Park as a public Park.
 Yours very truly, 
-John C. Olmsted."image="/loc/seattle/ravenna/letterresponse.png" linkOut="https://www.loc.gov/resource/mss52571.mss52571-02-096_0293_0296/?sp=4&st=image&r=-0.007,0.37,0.366,0.545,0"/>
+John C. Olmsted."
+  image="/loc/seattle/ravenna/letterresponse.png"
+  linkOut="https://www.loc.gov/resource/mss52571.mss52571-02-096_0293_0296/?sp=4&st=image&r=-0.007,0.37,0.366,0.545,0"/>
 
 In 1909, the city acquired the park from the Becks. Soon after, the large trees, the stars of the park, started mysteriously disappearing. Roosevelt, the so-called Largest Fir Tree in the State, was the first to be cut down, which alarmed many people.
 
