--- a/src/app/content/sewy/ames.mdx
+++ b/src/app/content/sewy/ames.mdx
@@ -17,4 +17,9 @@ blurb:
 
 # Ames Monument
 
-<LOCItem caption="View from the northeast" alt="Color photograph of pyramid" image="/loc/sewy/ames/viewFromNE.png" linkOut="https://www.loc.gov/resource/hhh.wy0049.photos/?sp=1"/>
+<LOCItem
+  type="pnp"
+  caption="View from the northeast"
+  alt="Color photograph of pyramid"
+  image="/loc/sewy/ames/viewFromNE.png"
+  linkOut="https://www.loc.gov/resource/hhh.wy0049.photos/?sp=1"/>
