--- a/src/app/content/sewy/knight.mdx
+++ b/src/app/content/sewy/knight.mdx
@@ -37,6 +37,11 @@ one guy, sweating buckets....I can think of one reason
 
 Eventually, the camp grew from tents to cabins, which Knight designed and built with the help of five students. To transport things to the camp, they got eleven Franklin cars, which they painted bright yellow with a dinosaur logo. Lecturers and students would come across the country to learn at the camp.
 
-<LOCItem caption="Classroom Building from east" alt="black and white photograph of log building" image="/loc/sewy/knight/classroom.png" linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=13"/>
+<LOCItem
+  type="pnp"
+  caption="Classroom Building from east"
+  alt="black and white photograph of log building"
+  image="/loc/sewy/knight/classroom.png"
+  linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=13"/>
 
 Knight was an ardent educator - in his time, it is estimated that he taught over 13,000 students. And he was disappointed with the amount of fossils that would be extracted from Wyoming and sent out of the state -- so he acquired the Brontosaurus fossils and assembled it for the museum. After his retirement, he kept working, and taught himself metalwork to construct the lifesize T-Rex out of copper plates that sit outside the building named after him.
