--- a/src/app/content/seattle/architects/cunninghamHall.mdx
+++ b/src/app/content/seattle/architects/cunninghamHall.mdx
@@ -31,11 +31,21 @@ Cunningham Hall was built for the 1909 Alaska-Yukon-Pacific Exposition in Seattl
 
 To create a fair that would rival Portland’s, Seattle hired the Olmsted Brothers firm to design the layout of the fair. The Olmsted Brothers firm, familiar with Seattle from designing the city’s park system, chose to feature Mount Rainier as the centerpiece of the fairgrounds. Rainier Vista still exists on the university’s campus with the fountain and pathway pointing at the mountain.
 
-<LOCItem caption="Authorized birds eye view of the Alaska-Yukon-Pacific Exposition." alt="A colorized drawing depicting a bird’s eye view of the Alaska-Yukon-Pacific Expostion fair grounds in 1909." image="/loc/seattle/cunninghamHall/bigMap.png" linkOut="https://www.loc.gov/resource/g4284s.ct011997/?r=-0.403,0.311,1.133,0.777,0"/>
+<LOCItem
+    type="map"
+    caption="Authorized birds eye view of the Alaska-Yukon-Pacific Exposition."
+    alt="A colorized drawing depicting a bird’s eye view of the Alaska-Yukon-Pacific Expostion fair grounds in 1909."
+    image="/loc/seattle/cunninghamHall/bigMap.png"
+    linkOut="https://www.loc.gov/resource/g4284s.ct011997/?r=-0.403,0.311,1.133,0.777,0"/>
 
 Cunningham Hall was designed by architects were Saunders and Lawton, whose partnership designed many buildings around Seattle, including the old Beacon Hill Elementary School and the Alaska Building in Pioneer Square. They also designed the Hoo Hoo House for the AYP.
 
-<LOCItem caption="The Hoo Hoo House was built for and by the Hoo Hoo Club which was a fraternity for people in the lumber business. With its wooden architecture, it stood out like a sore thumb compared to the other stucco-clad buildings of the A-Y-P." alt="A black and white photograph showing the front of the Hoo Hoo Club, a multi-storied wooden building. " image="/loc/seattle/cunninghamHall/hoo.png" linkOut="https://www.loc.gov/resource/hhh.wa0056.photos/?sp=3"/>
+<LOCItem
+    type="pnp"
+    caption="The Hoo Hoo House was built for and by the Hoo Hoo Club which was a fraternity for people in the lumber business. With its wooden architecture, it stood out like a sore thumb compared to the other stucco-clad buildings of the A-Y-P."
+    alt="A black and white photograph showing the front of the Hoo Hoo Club, a multi-storied wooden building. "
+    image="/loc/seattle/cunninghamHall/hoo.png"
+    linkOut="https://www.loc.gov/resource/hhh.wa0056.photos/?sp=3"/>
 
 In 2008, the university wanted to build its new molecular engineering building on the site of Cunningham Hall. However, aware of its history, the decision was made to preserve the building by moving it to a new location.
 
