--- a/src/app/content/seattle/architects/firestationNo18.mdx
+++ b/src/app/content/seattle/architects/firestationNo18.mdx
@@ -21,13 +21,22 @@ Incorporated in 1889, they had all the things that a town would need, including 
 
 But the new town was missing one critical piece -- access to fresh water. Sitting on the saltwater sound and with no fresh water sources nearby, Ballard relied on the city of Seattle to provide them with safe drinking water. And although it was the second-largest town in King County, in 1907, Ballard became a part of the larger town.
 
-<LOCItem image="/loc/seattle/firestationNo18/ballard.png" linkOut="https://www.loc.gov/resource/sn87093407/1907-02-06/ed-1/?sp=1&q=ballard+annexation&r=0.604,0.48,0.518,0.358,0" caption="Citizens of Ballard were not happy with the decision. On the day they merged, the flag was flown at half mast."/>
+<LOCItem
+    type="newspaper"
+    image="/loc/seattle/firestationNo18/ballard.png"
+    linkOut="https://www.loc.gov/resource/sn87093407/1907-02-06/ed-1/?sp=1&q=ballard+annexation&r=0.604,0.48,0.518,0.358,0"
+    caption="Citizens of Ballard were not happy with the decision. On the day they merged, the flag was flown at half mast."/>
 
 In 1910, Seattle replaced the wooden fire station with the red brick building that still stands today. The architects for the new structure were Bebb & Mendel, who also designed the University Heights Elementary School and the Oriental Building in Downtown Seattle. Bebb later went on to design the Seattle Asian Art Museum (known at the time as the Art Institute of Seattle).
 
 At the time, fire engines were powered by horses, so the area at the back of the station contained horse stalls.
 
-<LOCItem image="/loc/seattle/firestationNo18/firehorse.png" linkOut="https://www.loc.gov/resource/cph.3a27542/" caption="Horse-drawn fire engine rushing to a fire" alt="Photograph shows three white horses rushing down city street pulling a steam fire engine carrying three fire fighters"/>
+<LOCItem
+    type="pnp"
+    image="/loc/seattle/firestationNo18/firehorse.png"
+    linkOut="https://www.loc.gov/resource/cph.3a27542/"
+    caption="Horse-drawn fire engine rushing to a fire"
+    alt="Photograph shows three white horses rushing down city street pulling a steam fire engine carrying three fire fighters"/>
 <ComicSection elements={[
     {type:"image", src:"/loc/seattle/firestationNo18/station.png", position:{col:1, row:1}, size:{width:3, height:3}},
     {type:"text", style:{outline:"box", backgroundColor:"white", fontSize:"1rem"}, src:"The front the station has four bay doors.", position:{col:1, row:1}, size:{width:3, height:1}},
@@ -51,7 +60,12 @@ The fire was so large that it burned for three days straight. The city had engin
 
 The Fireboat Duwamish is part of Seattle's firefighting fleet, and arrives when fires pop up near or on the water. For the Ballard lumber mill fire, it arrived on site from its home at Fire Station 5, located north of Colman Dock in downtown, and fought the fire from the canal.
 
-<LOCItem image="/loc/seattle/firestationNo18/fireboat.png" linkout="https://www.loc.gov/resource/hhh.wa0746.photos/?sp=1" caption="The Fireboat Duwamish is the 'best preserved' example of an early twentieth centure fireboat. It can be seen docked at the Historic Ships Wharf in Lake Union Park." alt=""/>
+<LOCItem
+    type="pnp"
+    image="/loc/seattle/firestationNo18/fireboat.png"
+    linkout="https://www.loc.gov/resource/hhh.wa0746.photos/?sp=1"
+    caption="The Fireboat Duwamish is the 'best preserved' example of an early twentieth centure fireboat. It can be seen docked at the Historic Ships Wharf in Lake Union Park."
+    alt=""/>
 
 The Ballard Firehouse still stands today, even though it’s no longer used as a fire station. It’s one of the few structures remaining from historic Ballard - others are the Ballard Bridge, the Ballard Locks, and the Carnegie Library.
 
