--- a/src/app/content/seattle/built/sinking-ship.mdx
+++ b/src/app/content/seattle/built/sinking-ship.mdx
@@ -14,18 +14,32 @@ blurb: "At the corner of Yesler, 1, and James sits the Sinking Ship Parking Gara
 stampName: "/seattle-general-2.svg"
 ---
 
-<LOCItem linkOut="https://www.loc.gov/item/75696663/" alt="crowded illustrated map of downtown Seattle" image="/loc/triangle.jpg" caption="Map of Seattle in 1891"/>
+<LOCItem
+    type="map"
+    linkOut="https://www.loc.gov/item/75696663/"
+    alt="crowded illustrated map of downtown Seattle"
+    image="/loc/triangle.jpg"
+    caption="Map of Seattle in 1891"/>
 
 Here, where Yesler, 1st, and James meet, a triangle piece of land hosts a unique parking garage called the “Sinking Ship”.
 
 Before this parking garage was built here, it was the site of three Seattle hotels: the Occidental I, the Occidental II, and the Hotel Seattle.
 
-<LOCItem linkOut="https://www.loc.gov/resource/gdcmassbookdig.seattlememories00redf/?sp=21" alt="photograph of a two story, medium building with a crowd outside" image="/loc/occidental.png" caption="Occidental Hotel"/>
+<LOCItem
+    type="book"
+    linkOut="https://www.loc.gov/resource/gdcmassbookdig.seattlememories00redf/?sp=21"
+    alt="photograph of a two story, medium building with a crowd outside"
+    image="/loc/occidental.png"
+    caption="Occidental Hotel"/>
 <ComicSection cols={4} elements={[
     {type: "image", src:"/comics/sinking-ship/g1.png", position:{col:4, row:1}, size:{width:1, height:2}},
     {type:"text", src:'*This* was the first "fancy" hotel in Seattle.', position:{col:2, row: 1},size:{width: 2, height: 1}, style:{outline: "bubble",}, bubbleStyle: {tailDegree: 10}}]}/>
 {/* <Comic alt="illustration of an old-timey man with glasses" caption="Doc Maynard, believer of the 'Seattle streets should follow the compass' system" position="right" speechBubbles={[{ text: '*This* was the first "fancy" hotel in Seattle.' }]} image="/comics/sinking-ship/g1.png" overlap={100} absoluteHeight={200}/> */}
-<LOCItem linkOut="https://www.loc.gov/resource/gdcmassbookdig.metropolitanseat00unse/?sp=19&r=-0.073,0.224,0.854,0.482,0" alt="photograph of a five story large building shaped like a wedge" image="/loc/seattle/seattle-hotel.png"/>
+<LOCItem
+    type="book"
+    linkOut="https://www.loc.gov/resource/gdcmassbookdig.metropolitanseat00unse/?sp=19&r=-0.073,0.224,0.854,0.482,0"
+    alt="photograph of a five story large building shaped like a wedge"
+    image="/loc/seattle/seattle-hotel.png"/>
 <ComicSection cols={5} elements={[
     {type: "image", src:"/comics/sinking-ship/g2.png", position:{col:1, row:2}, size:{width:2, height:2} },
     {type:"text", src:"But it’s cursed! how many hotels stood here before?", style:{outline: "bubble"},position:{col:1, row:1}, size:{width:2, height:1}, bubbleStyle: {tailDegree: 90}},
@@ -45,7 +59,12 @@ The Hotel Seattle, which was built to replace it, was also unlucky. In 1949, whe
 
 If you see a building in Pioneer Square that was around for the 1949 earthquake, you can probably find signs of earthquake damage.
 
-<LOCItem linkOut="https://www.loc.gov/resource/mss11049.mss11049-001_00683_00886/?sp=159" alt="two page spread of a notebook with cursive" image="/loc/susan-journal.png" caption="Page from Susan B. Anthony's journal"/>
+<LOCItem
+    type="manuscript"
+    linkOut="https://www.loc.gov/resource/mss11049.mss11049-001_00683_00886/?sp=159"
+    alt="two page spread of a notebook with cursive"
+    image="/loc/susan-journal.png"
+    caption="Page from Susan B. Anthony's journal"/>
  
 <ComicSection elements={[
     {type: "image", src:"/comics/sinking-ship/g3.png", position:{col:3, row:1}, size:{width:1, height:2}, alt:"Doc Maynard is standing looking proud"},
