google doc edits and alt text

--- a/src/app/content/seattle/built/tugboatFoss.mdx
+++ b/src/app/content/seattle/built/tugboatFoss.mdx
@@ -24,8 +24,8 @@ The oldest lightship:
     type="pnp"
     linkOut="https://www.loc.gov/resource/cph.3b19268/"
     image="/loc/seattle/tugboatFoss/lightboat.jpg"
-    caption="Lightships were used as floating lighthouses"
-    alt="photo of lightship"/>
+    caption="Lightships were used as floating lighthouses."
+    alt="A black and white photograph of a lightship at sea."/>
 
 The (second) oldest fireboat:
 <LOCItem
@@ -33,27 +33,28 @@ The (second) oldest fireboat:
     linkOut="https://www.loc.gov/resource/hhh.wa0746.photos/?sp=1"
     image="/loc/seattle/tugboatFoss/fireboatDuwamish.jpg"
     caption="Fireboat Duwamish"
-    alt="colored photo of red fireboat"/>
+    alt="A color photograph of the Fireboat Duwamish, a white and red boat, docked in a marina."/>
 
 <ComicSection elements={[
     {type:"text", src:"and the definitive, MOST-OLDEST wooden tugboat:",position:{col: 1, row: 1}, size: {width:3, height: 2}, style:{outline: "none", fontSize: "1rem"}},
-    {type: "image", src:"/loc/seattle/tugboatFoss/theFoss.png", position:{ col: 1, row:1}, size:{width: 3, height: 2}, alt:""},
+    {type: "image", alt:"A brightly colored comic of the tugboat, the Arthur Foss, outlined by a starburst.", src:"/loc/seattle/tugboatFoss/theFoss.png", position:{ col: 1, row:1}, size:{width: 3, height: 2}, alt:""},
     {type:"text", src:"The Arthur Foss!",position:{col:1, row:2}, size:{width:3, height:1}, style:{outline: "none", fontSize:"2rem",  textAlign: "center"}},
-    {type:"text", src:"And though it was constructed in 1889, it still, very impressively, floats (which is the first job of any boat)", position:{col:2, row:4},size:{width: 2, height: 1}, style:{outline: "box", backgroundColor:"white"}}
+    {type:"text", src:"And though it was constructed in 1889, it still, very impressively, floats (which is the first job of any boat).", position:{col:2, row:4},size:{width: 2, height: 1}, style:{outline: "box", backgroundColor:"white"}}
 ]}/>
 
-The *Arthur Foss* held many jobs. It started off in Astoria, Oregon, navigating the dangerous mouth of the Columbia River where it dumps into the Pacific Ocean. In the waters dubbed the “graveyard of the Pacific”, the Arthur Foss, then known as Wallowa, would act as an experienced guide and tow boats across the crossing.
+The *Arthur Foss* held many jobs. It started off in Astoria, Oregon, navigating the dangerous mouth of the Columbia River where it dumps into the Pacific Ocean. In the waters dubbed the “graveyard of the Pacific”, the *Arthur Foss*, then known as the *Wallowa*, would act as an experienced guide and tow boats throughthe crossing.
 
 
 <LOCItem
     type="pnp"
     linkOut="https://www.loc.gov/resource/ppmsca.18165/"
     image="/loc/seattle/tugboatFoss/columbiaRiver.png"
-    caption=""/>
+    caption=""
+    alt="A colorized photo of the Columbia River with a steam paddle boat navigating the river rapids and large rocks."/>
 
 <ComicSection overlap={150} elements={[
-    {type:"text", src:"You see that, kid? That's the Columbia River", position:{col: 2, row: 1}, size: {width:2, height: 1}, style:{outline: "bubble",}, bubbleStyle: {tailDegree: 60}},
-{type: "image", src:"/loc/seattle/tugboatFoss/columbia.png", position:{col:2, row:2}, size:{width:2, height:3}},
+    {type:"text", src:"You see that, kid? That's the Columbia River.", position:{col: 2, row: 1}, size: {width:2, height: 1}, style:{outline: "bubble",}, bubbleStyle: {tailDegree: 60}},
+{type: "image", alt:"A brightly colored comic of the Arthur Foss tugboat looking determined, and a figure standing next to it patting its side encouragingly.", src:"/loc/seattle/tugboatFoss/columbia.png", position:{col:2, row:2}, size:{width:2, height:3}},
 {type:"text", src:"The winds are fierce.", position:{col: 1, row: 2}, size: {width:1, height: 1}, style:{outline: "bubble",}, bubbleStyle: {tailDegree: 0}},
 {type:"text", src:"The waves are unforgiving. ", position:{col: 1, row: 3}, size: {width:1, height: 1}, style:{outline: "bubble",}, bubbleStyle: {tailDegree: 0}},
 {type:"text", src:"This crossing has defeated over 2,000 boats.", position:{col: 1, row: 4}, size: {width:3, height: 1}, style:{outline: "bubble",fontSize:"1rem"}, bubbleStyle: {tailDegree: 320}},
@@ -61,29 +62,29 @@ The *Arthur Foss* held many jobs. It started off in Astoria, Oregon, navigating 
 {type:"text", src:"go get 'em!",position:{col:2, row:6}, size:{width:2, height:1}, style:{outline: "bubble", fontSize:"2rem",  textAlign: "center"}, bubbleStyle: {tailDegree: 290}},
 
 ]}/>
-In 1929, the Foss Launch & Tug Company bought Wallowa and renamed it Arthur Foss. To help the company pay for the cost of the vessel, they leased it out to feature as the titular boat in Tugboat Annie, the first major movie filmed in Washington State. 
+In 1929, the Foss Launch & Tug Company bought the *Wallowa* and renamed it the *Arthur Foss*. To help the company pay for the cost of the vessel, they leased it out to feature as the titular boat in Tugboat Annie, the first major movie filmed in Washington State. 
 
 <ComicSection elements={[
     {type:"text", src:"You're gonna be a star, kid! Gimme your best movie star smile", position:{col: 1, row: 1}, size: {width:2, height: 1}, style:{outline: "bubble",}, bubbleStyle: {tailDegree: 90}},
-    {type:"image", src:"/loc/seattle/tugboatFoss/movie.png",position:{col: 1, row: 2}, size: {width:3, height: 4},},
+    {type:"image", alt:"A brightly colored comic of the Arthur Foss tugboat smiling awkwardly for the camera. A figure is seated in a director’s chair next to a film camera that is pointed at the tug boat.", src:"/loc/seattle/tugboatFoss/movie.png",position:{col: 1, row: 2}, size: {width:3, height: 4},},
     {type:"text", src:"... Is that how you always smile?", position:{col: 3, row: 5}, size: {width:1, height: 1}, style:{outline: "bubble",} , bubbleStyle: {tailDegree: 180}},
 ]}/>
 
 Despite becoming an A-list celebrity, the Arthur Foss continued to work as a tugboat, and found itself it many dangerous situations. 
 <ComicSection cols={4} rowHeight="2rem" elements={[
-    {type:"text", src:"In 1937, it caught on fire, and forcefully sank itself to avoid burning down completely.",position:{col: 1, row: 1}, size: {width:4, height: 2}, style:{outline: "none", fontSize: "1rem"}},
-    {type: "image", src:"/loc/seattle/tugboatFoss/fire1.png", position:{ col: 1, row:2}, size:{width: 2, height: 2}, alt:""},
-    {type: "image", src:"/loc/seattle/tugboatFoss/fire2.png", position:{ col: 3, row:2}, size:{width: 2, height: 2}, alt:""},
+    {type:"text", src:"In 1937, it caught fire, and was forcefully sunk to avoid burning down completely.",position:{col: 1, row: 1}, size: {width:4, height: 2}, style:{outline: "none", fontSize: "1rem"}},
+    {type: "image", alt:"A brightly colored comic of the Arthur Foss tugboat on fire. Its mouth and eyes open in panic", src:"/loc/seattle/tugboatFoss/fire1.png", position:{ col: 1, row:2}, size:{width: 2, height: 2}, alt:""},
+    {type: "image", alt:"A brightly colored comic of the Arthur Foss on fire, being rammed by another object. The tugboat’s eyes are scrunched in surprise.", src:"/loc/seattle/tugboatFoss/fire2.png", position:{ col: 3, row:2}, size:{width: 2, height: 2}, alt:""},
     {type:"text",src:"I guess this is better than being on fire...", position:{ col: 2, row:10}, size:{width: 2, height: 2}, style:{outline: "bubble", fontSize: "1rem"}},
-    {type: "image", src:"/loc/seattle/tugboatFoss/fire3.png", position:{ col: 1, row:11}, size:{width: 4, height: 7}, alt:""},
+    {type: "image", alt:"A brightly colored comic showing the Arthur Foss tugboat frowning at the bottom of the ocean with a couple of fish swimming around it.", src:"/loc/seattle/tugboatFoss/fire3.png", position:{ col: 1, row:11}, size:{width: 4, height: 7}, alt:""},
 ]}/>
 
-In 1941, it found itself caught in Hawaii during the war. Afraid of the bright white and green attracting torpedoes, the crew mixed white paint with engine grease to paint the boat a dark gray to blend in with the ocean
+In 1941, it found itself caught in Hawaii during the war. Afraid that its bright white and green paint would attract torpedoes, the crew mixed white paint with engine grease to paint the boat a dark gray to blend in with the ocean.
 
 
 <ComicSection cols={4} elements={[
-    {type:"text", src:"Better this than sinking again", position:{col: 3, row: 1}, size: {width:2, height: 1}, style:{outline: "bubble",}, },
-    {type:"image", src:"/loc/seattle/tugboatFoss/paint.png",position:{col: 1, row: 1}, size: {width:3, height: 3},},
+    {type:"text", src:"Better this than sinking again.", position:{col: 3, row: 1}, size: {width:2, height: 1}, style:{outline: "bubble",}, },
+    {type:"image", alt:"A brightly colored comic of the Arthur Foss tugboat covered in gray smudges, and its eyes narrowed in annoyance.", src:"/loc/seattle/tugboatFoss/paint.png",position:{col: 1, row: 1}, size: {width:3, height: 3},},
 ]}/>
 
 And in 1947, while being transported back from Hawaii, it fell off its keel blocks and damaged its hull.
