--- a/src/app/content/seattle/architects/arai.mdx
+++ b/src/app/content/seattle/architects/arai.mdx
@@ -9,7 +9,7 @@ zoom: 18
 tags: ["architects", "built"]
 cameraImage: "/loc/seattle/arai/temple.png"
 cardImage: "/loc/seattle/arai/gate.png"
-stampName:
+stampName: "/illustrations/seattleStamp2.png"
 photoPrompt:
 blurb:
 stickers: []
