--- a/src/app/content/seattle/architects/cunninghamHall.mdx
+++ b/src/app/content/seattle/architects/cunninghamHall.mdx
@@ -9,7 +9,7 @@ zoom: 16
 tags: ["architects", "built"]
 cameraImage: "/loc/seattle/cunninghamHall/cunninghamHallMap.png"
 cardImage: "/loc/seattle/cunninghamHall/cunninghamHallMap.png"
-stampName: "/seattle-general-2.svg"
+stampName: "/illustrations/aaSeattleStamp.png"
 photoPrompt: "Try walking the path that Cunningham Hall took and imagine what it was like! Are there places that would be hard to move a building?"
 blurb: "In 2009, Cunningham Hall was moved .3 miles to a new location. At 100 years old, it's one of only a few buildings still around from the Alaksa-Yukon-Pacific exposition."
 stickers: [{image: "/loc/seattle/cunninghamHall/aypStamp.png",title: "Exposition Logo of the Alaska-Yukon-Pacific.", linkOut: "https://www.loc.gov/resource/g4284s.ct011997/?r=0.059,0.604,0.155,0.105,0"},{image: "/loc/seattle/cunninghamHall/aypBanner.png", linkOut: "https://www.loc.gov/resource/g4284s.ct011997/?r=0.778,0.593,0.153,0.105,0"}, {image: "/loc/seattle/cunninghamHall/seattleUSA.png", linkOut: "https://www.loc.gov/resource/g4284s.ct011997/?r=0.303,0.534,0.38,0.26,0"},{image: "/loc/seattle/cunninghamHall/hallSticker.png"}]
