change welcome modal

--- a/src/app/content/seattle/olmsted/ravenna.mdx
+++ b/src/app/content/seattle/olmsted/ravenna.mdx
@@ -1,6 +1,6 @@
 ---
 title: Disappearing Trees in Ravenna Park
-location: ["Seattle"]
+location: ["Hidden"]
 locationTitle: Ravenna Park
 latlon: [47.67253514142577, -122.30892713366536]
 zoom: 14
